--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
     display: flex;
     max-width: 6%;
     min-width: 70px;
+    cursor: pointer;
 }
 
 .top-nav .navbar-left {
@@ -115,6 +116,7 @@ body {
 .top-nav .navbar-right .avatar {
     border-radius: 20%;
     display: flex;
+    cursor: pointer;
 }
 
 .top-nav .navbar-right .search {
@@ -123,6 +125,7 @@ body {
     display: flex;
     margin-right: 10px;
     margin-top: 7px;
+    cursor: pointer;
 }
 
 
@@ -140,6 +143,7 @@ body {
 
 .comedy-movies-container {
     margin-left: 80px;
+    margin-top: 40px;
 }
 
 .movies-container h3 {
@@ -152,7 +156,7 @@ body {
 
 .horror-movies-container {
     margin-left: 80px;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 
@@ -180,6 +184,7 @@ section img {
     margin-right: 10px;
     transition: transform 400ms;
     border-radius: 1%;
+    cursor: pointer;
 }
 
 section img:hover {
@@ -190,15 +195,56 @@ section img:hover {
 .section2 img {
     object-fit: contain;
     width: 100%;
-    max-height: 18vw;
+    max-height: 25vw;
     margin-right: 10px;
     transition: transform 400ms;
     border-radius: 1%;
+    cursor: pointer;
 }
 
 .section2 img:hover {
     transform: scale(1.07);
     opacity: 1;
+}
+
+footer {
+    margin-top: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer nav  {
+    width: 1100px;
+    align-content: center;
+    margin-left: 5%;
+    padding-bottom: 50px;
+
+    
+}
+
+
+footer nav div {
+    padding-left: 3vw;
+}
+footer nav img  {
+    height: 25px;
+    display: inline-flex;  
+    padding-bottom: 20px;
+    padding-right: 30px ;
+ 
+}
+
+footer nav a {
+    color: gray;
+    text-decoration: none;
+    padding: 0px 0px 0px 3vw;
+    display: inline-flex;
+    font-size: 0.8vw;
+    text-align: center;
+    width: 190px;
+    height: 30px;
+
+    
 }
 
 /* On screens that are 992px or less, set the background color to blue */
